--- a/content/intro-python.ipynb
+++ b/content/intro-python.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,11 +65,19 @@
         "id": "L--QiWN7DCtd",
         "outputId": "a2a05bc8-2465-4134-ab54-a2c552c60852"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Juan 5\n"
+          ]
+        }
+      ],
       "source": [
-        "base_mayor, base_menor, altura = 5,7,4\n",
-        "area = base_mayor * base_menor * altura / 2\n",
-        "print(str(area) + \" u^2\")"
+        "edad = 5\n",
+        "nombre = \"Juan\"\n",
+        "print(nombre, edad)\n"
       ]
     },
     {
@@ -105,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -113,7 +121,15 @@
         "id": "kPEy4dqRaofY",
         "outputId": "3412f869-7fba-4599-d263-b4fdfe72cfff"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hola ., bienvenido\n"
+          ]
+        }
+      ],
       "source": [
         "nombre = input(\"Ingresa tu nombre:\")\n",
         "print(\"Hola \" + nombre + \", bienvenido\")"
@@ -162,7 +178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -170,7 +186,16 @@
         "id": "_A2MHIPvcvxB",
         "outputId": "47545a3a-3a24-4935-fba9-2e73194bf4e1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Total: $9.0\n",
+            "Puedes comprar: 30\n"
+          ]
+        }
+      ],
       "source": [
         "peso05 = float(input(\"Ingrese la cantidad de monedas de $0.5: \"))\n",
         "peso1 = float(input(\"Ingrese la cantidad de monedas de $1: \"))\n",
@@ -233,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -241,7 +266,20 @@
         "id": "RzRn1hGhLsOO",
         "outputId": "e2f31704-25ca-4365-df20-6d6fed589e86"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "False\n",
+            "False\n",
+            "True\n",
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
         "print(10 < 1)\n",
         "print(5 != 5)\n",
@@ -346,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -354,7 +392,15 @@
         "id": "63ahuJS6M-ka",
         "outputId": "3b53b42d-62d8-4e51-c476-f973859a201b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "cont = 0\n",
         "cont += 1\n",
@@ -388,7 +434,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -396,7 +442,25 @@
         "id": "RwhfCLehgCLJ",
         "outputId": "ebe81f06-264c-4b0f-883d-3a95d3250f2e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 caracteres\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "nombre = input(\"Ingresa tu nombre:\")\n",
         "print(str(len(nombre)) + \" caracteres\")\n",
@@ -475,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -483,7 +547,15 @@
         "id": "QcZdqp9JJYpz",
         "outputId": "71e883a9-87bb-4c77-fa33-a540866bb34d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Es par\n"
+          ]
+        }
+      ],
       "source": [
         "n = int(input(\"Introduce un numero: \"))\n",
         "if n % 2 == 0:\n",
@@ -535,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -543,7 +615,24 @@
         "id": "1DTxwWCgJm8T",
         "outputId": "15e72d87-2895-4f3d-f12f-78ebbdcb6041"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
         "# Usando un for.\n",
         "for i in range(1, 11):\n",
@@ -552,7 +641,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -560,7 +649,24 @@
         "id": "spvGcPYaJqLT",
         "outputId": "69bbdc3f-2902-4eb6-840a-5d8dca2a55f6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
         "# Usando un while.\n",
         "i = 1\n",
@@ -632,7 +738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -640,7 +746,15 @@
         "id": "DLyewAYaJuLT",
         "outputId": "276a5833-0d4d-42e8-f208-3f4d570d20d4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "15\n"
+          ]
+        }
+      ],
       "source": [
         "suma = 0\n",
         "lista = [1, 2, 3, 4, 5]\n",
@@ -651,7 +765,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -659,7 +773,15 @@
         "id": "bCMMN7HPJ1FO",
         "outputId": "d19891d0-31a1-441d-c711-91346f39a0c4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "15\n"
+          ]
+        }
+      ],
       "source": [
         "# Tambien es valido.\n",
         "suma = 0\n",
@@ -679,7 +801,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.4"
     }
   },
   "nbformat": 4,
